# context-footprint

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  README.md  context-footprint.code-workspace  extract_calls.py  pyproject.toml  test_ast.py  test_doc.py  test_doc_extractor.py  tmp.out
.cursor/plans/: cf_graph_builder_reimplementation_30e1985f.plan.md  cf_query_refactoring_f5a62779.plan.md  python_extractor_prototype_a493b356.plan.md
.github/workflows/: docker.yml  package.yml  release-cf-extractor.yml  release-cftool-pypi.yml  release.yml  release_crates.yml  test.yml
docs/: COMPLETION_SUMMARY.md  adr-004-semantic-data-abstraction.md  cf-research-requirement.md  design.md  design_pattern.md  extractor-spec.md  patterns_to_detect.md  python-protocol-support.md  release-cftool.md  semantic_data_redesign.md  testing.md  the-paper.md
extractors/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
extractors/python/: .gitignore  README.md  pyproject.toml  test_jedi.py
extractors/python/cf_extractor/: __init__.py  benchmark.py  diff_backends.py  extractor.py  jedi_resolver.py  main.py  reference_collector.py  reference_index.py  resolver_backend.py  schema.py
extractors/python/cf_extractor/resolvers/: __init__.py  base.py  jedi_backend.py  lsp_common.py  pyrefly_backend.py  ty_backend.py
extractors/python/tests/: __init__.py  test_extractor.py
extractors/python/tests/fixtures/: base_alias.py  base_super.py  child_alias.py  child_super.py  default_arg_ambig.py  default_arg_cross.py  sentinel_a.py  sentinel_b.py  sentinel_def.py  simple.py  test_annotated_doc.py  test_augassign.py  test_cls_call.py  test_default_arg_ref.py  test_except_resolve.py  test_func_as_value.py  test_method_resolve.py  test_nested_call.py  test_self_call.py  test_super_call.py  with_class.py
extractors/src/: cli.ts  index.ts
extractors/src/core/: extractor-base.ts  lsp-client.ts  types.ts  utils.ts
extractors/src/languages/python/: config.ts  constants.ts  definition-factory.ts  extractor.ts  hover.ts  reference-utils.ts  symbol-utils.ts  type-flattener.ts  types.ts
extractors/tests/: integration.test.ts  self-access.test.ts  test-helper.ts  type-flattener.test.ts
extractors/tests/multi_file_self_access/: ports.py  service.py
extractors/tests/simple_python_for_extract/: main.py
scripts/: extract_python_semantics.py
src/: cli.rs  graph.rs  lib.rs  main.rs  symbol.rs
src/adapters/: mod.rs
src/adapters/doc_scorer/: heuristic.rs  mod.rs  simple.rs
src/adapters/fs/: reader.rs
src/adapters/policy/: academic.rs  mod.rs  strict.rs
src/adapters/scip/: adapter.rs  parser.rs
src/adapters/size_function/: tiktoken.rs
src/adapters/test_detector/: go.rs  java.rs  javascript.rs  mod.rs  python.rs  rust.rs
src/app/: dto.rs  engine.rs  mod.rs
src/domain/: builder.rs  edge.rs  graph.rs  mod.rs  node.rs  policy.rs  ports.rs  semantic.rs  solver.rs  type_registry.rs
src/server/: http.rs  mcp.rs  mod.rs
tests/: cli_integration_test.rs  domain_patterns_test.rs  end_to_end_test.rs  graph_builder_test.rs  implemented_by_test.rs  interface_method_test.rs  lib_accessible.rs  policy_comparison_test.rs  python_abstract_factory_test.rs
tests/common/: fixtures.rs  mock.rs  mod.rs
tests/fixtures/: generate_scip.sh  setup_fastapi.sh
tests/fixtures/simple_python/: README.md  main.py  utils.py
tests/fixtures/simple_python_for_extract/: main.py
