[package]
name = "context-footprint"
version = "0.1.0"
edition = "2024"
description = "A static analysis tool for measuring architectural context exposure in codebases."
license = "Apache-2.0"
repository = "https://github.com/AiricDev/context-footprint"
readme = "README.md"
keywords = ["static-analysis", "metrics", "context", "scip", "code-architect"]
categories = ["development-tools"]

[[bin]]
name = "cftool"
path = "src/main.rs"

[dependencies]
prost = "0.13"
prost-types = "0.13"
petgraph = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
memmap2 = "0.9"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rmcp = { version = "0.14", features = ["server", "transport-io", "schemars"] }
schemars = "1.2"

[dev-dependencies]
anyhow = "1.0"
tempfile = "3.8"
tower = "0.5"

[build-dependencies]
prost-build = "0.13"
