[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "context-footprint"
version = "0.1.0"
description = "Context Footprint: analyze code coupling via CF metric"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [{ name = "Leric Zhang" }]
keywords = ["context-footprint", "static-analysis", "coupling", "metrics", "semantic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "cf-extractor>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/AiricDev/context-footprint"
Repository = "https://github.com/AiricDev/context-footprint"
Documentation = "https://github.com/AiricDev/context-footprint"

[tool.maturin]
bindings = "bin"

# Local dev: use extractors/python when cf-extractor is not on PyPI yet
[tool.uv.sources]
cf-extractor = { path = "extractors/python" }
