[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "context-footprint-extractor"
version = "0.1.0"
description = "Python semantic data extractor for Context-Footprint (AST + Jedi)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "jedi>=0.19.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
]

[project.scripts]
cf-extract = "cf_extractor.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cf_extractor*"]
