[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cf-extractor"
version = "0.1.0"
description = "Python semantic data extractor for Context-Footprint (AST + Jedi)"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [{ name = "Leric Zhang" }]
keywords = ["context-footprint", "semantic", "extractor", "ast", "jedi", "python"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "jedi>=0.19.0",
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://github.com/AiricDev/context-footprint"
Repository = "https://github.com/AiricDev/context-footprint"
Documentation = "https://github.com/AiricDev/context-footprint/tree/main/extractors/python"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[dependency-groups]
dev = [
    "build>=1.4.0",
    "pytest>=7.0",
    "twine>=6.2.0",
]

[project.scripts]
cf-extract = "cf_extractor.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cf_extractor*"]
