[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cf-extractor"
version = "0.2.0"
description = "Python semantic data extractor for Context-Footprint (AST + pluggable resolvers)"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.9"
authors = [{ name = "Leric Zhang" }]
keywords = ["context-footprint", "semantic", "extractor", "ast", "jedi", "ty", "python"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "pydantic>=2.0",
    "ty>=0.0.1",
]

[project.urls]
Homepage = "https://github.com/AiricDev/context-footprint"
Repository = "https://github.com/AiricDev/context-footprint"
Documentation = "https://github.com/AiricDev/context-footprint/tree/main/extractors/python"

[project.optional-dependencies]
dev = [
    "jedi>=0.19.0",
    "pyrefly>=0.57.1",
    "pytest>=7.0",
]

[dependency-groups]
dev = [
    "build>=1.4.0",
    "jedi>=0.19.0",
    "pyrefly>=0.57.1",
    "pytest>=7.0",
    "twine>=6.2.0",
]

[project.scripts]
cf-extract = "cf_extractor.main:main"
cf-extract-benchmark = "cf_extractor.benchmark:main"
cf-extract-diff = "cf_extractor.diff_backends:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cf_extractor*"]

[tool.pytest.ini_options]
# Fixture files under tests/fixtures/ are source code for the extractor, not test modules.
# Exclude them so pytest does not try to import them (avoids missing deps e.g. fastapi).
norecursedirs = [".git", "__pycache__", "*.egg-info", "fixtures"]
